index.css
/* ... */
@media only screen and (max-width:1265px) {

    .wrapper { width: 90%; }

    .social-bar { display: none; }

    .slider-controls {
        background: #f2f2f2;
        border-radius: 14px;
        box-shadow: 0 0 5px 3px #a6a6a6;
    }

    .slider-controls__pages { color: #a6a6a6; }

    .slider-controls__left-arrow > path ,
    .slider-controls__right-arrow > path
    { fill: #5da8ef;  }

    .slider-controls__left-arrow:hover > path ,
    .slider-controls__right-arrow:hover > path
    { fill: #333; }

    .promo-box { width: 30%; }
    .contact-content { width: 40%; }
}

@media only screen and (max-width: 1155px) {

    .gallery { text-align: center; }
    .gallery__col-2 {
        position: relative;
        top: 0;
    }
    .gallery__content { margin: 0 auto; }

    .catalog__surf-image { left: 0; }

    .section-alpha, .section-betha { text-align: center; }
    .promo-box { width: 100%; padding-right: 0; }
    .section-alpha__image, .section-betha__image { float: none; }
    .promo-box__title { position: static; margin-top: -90px; }
    .promo-box__title::after { left: 50%; }
    .promo-box__text { width: 80%; margin: 20px auto; }
    .vertical-text { display: none; }

    .section-contact { text-align: center; }
    .section-contact__image { position: static; }
    .contact-content { width: 100%; }
    .contact-contet__address { margin: 3px auto; }
}

@media only screen and (max-width: 470px) {


    .header { text-align: center; }
    .header__logo { float: none; margin-right: 0; }
    /* This is hamburger menu for mobile phones from: https://codepen.io/erikterwan/pen/EVzeRP */

    .navigation  {
      display: block;
      z-index: 1;
      position: relative;
      -webkit-user-select: none;
      user-select: none;
    }

    .navigation input {
      display: block;
      width: 40px;
      height: 32px;
      position: absolute;
      top: -7px;
      left: -5px;
      cursor: pointer;
      opacity: 0; /* hide this */
      z-index: 3; /* and place it over the hamburger */
     -webkit-touch-callout: none;
    }

    .navigation span {
      display: block;
      width: 33px;
      height: 4px;
      margin-bottom: 5px;
      position: relative;
      background: #cdcdcd;
      border-radius: 3px;
      z-index: 2;
      transform-origin: 4px 0px;
      transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
    }


    .navigation span:first-child {
        transform-origin: 0% 0%;
    }

    .navigation span:nth-last-child(2) {
        transform-origin: 0% 100%;
    }

    .navigation input:checked ~ span {
      opacity: 1;
      transform: rotate(45deg) translate(-2px, -1px);
      background: #232323;
    }

    .navigation input:checked ~ span:nth-last-child(3) {
      opacity: 0;
      transform: rotate(0deg) scale(0.2, 0.2);
    }

    .navigation input:checked ~ span:nth-last-child(2) {
      opacity: 1;
      transform: rotate(-45deg) translate(0, -1px);
    }

    .navigation__list {
        position: absolute;
        top: 15px;
        left: -10px;
        transform: translate(-100%, 0);
        transition: all 0.5s;
        width: 200px;
        margin: -100px 0 0 -50px;
        padding: 50px;
        padding-top: 125px;
        background: #ededed;
        -webkit-font-smoothing: antialiased;
        /* to stop flickering of text in safari */
        transform-origin: 0% 0%;
        transform: translate(-100%, 0);
        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
        z-index: 1;
        border-radius: 34px;
    }

    .navigation__item {
        display: block;
        width: 100%;
        padding: 2px;
        padding: 8px;
    }

    .navigation input:checked ~ ul {
        transform: scale(1.0, 1.0);
        opacity: 1;
    }
}

